Closed
Bug 373061
Opened 19 years ago
Closed 18 years ago
complexType with optional complex content fails
Categories
(Core Graveyard :: XForms, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: sspeiche, Assigned: sspeiche)
Details
(Keywords: fixed1.8.0.12, fixed1.8.1.4)
Attachments
(2 files)
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.2) Gecko/20070219 Firefox/2.0.0.2
Build Identifier:
When complex type compositor of sequence has default minOccurs=1 and all containing element declarations have minOccurs=0 then empty content should be allowed. Now it is not.
Reproducible: Always
| Assignee | ||
Comment 1•19 years ago
|
||
| Assignee | ||
Comment 2•19 years ago
|
||
Attachment #257716 -
Flags: review?(doronr)
Updated•19 years ago
|
Attachment #257716 -
Flags: review?(doronr) → review+
| Assignee | ||
Updated•19 years ago
|
Attachment #257716 -
Flags: review?(aaronr)
Assignee: xforms → sspeiche
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attachment #257716 -
Flags: review?(aaronr) → review+
checked into trunk for sspeiche
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Whiteboard: xf-to-branch
checked into 1.8 branch on 2007-04-12
checked into 1.8.0 branch on 2007-04-16
Keywords: fixed1.8.0.12,
fixed1.8.1.4
Whiteboard: xf-to-branch
Updated•9 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•