NPOTDB complexType with optional complex content fails. Bug 373061, p=sspeiche r=doronr+aaronr