extensions/schema-validation/src/nsSchemaValidator.h
@@ -318,7 +318,7 @@ private:
   nsresult ValidateComplexSequence(nsIDOMNode *aStartNode,
                                    nsISchemaModelGroup *aSchemaModelGroup,
                                    nsIDOMNode **aLeftOvers, PRBool *aNotFound,
-                                   PRBool *aResult);
+                                   PRBool *aResult, PRUint32 *aValidatedNodes);
 
   nsresult ValidateComplexParticle(nsIDOMNode* aNode,
                                    nsISchemaParticle *aSchemaParticle,
